--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -5,6 +5,5 @@
 
 /* Header */
 .navbar-inverse {
-	background-color: #202020;
-	rgba(0, 0, 0, 0.4) 0 1px 1px;
+	background-color: rgba(0, 0, 0, 0.4) 0 1px 1px;
 }
